--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@simplewebauthn/server": "^10.0.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.1"
   }
 }
